--- a/vignettes/Vignette_V_2.00.Rmd
+++ b/vignettes/Vignette_V_2.00.Rmd
@@ -82,7 +82,7 @@ $\lambda_{i,j}$ is the expected value of read abundance for sliding window (bin)
 
 $$t_{i,j} = log2(s_j) + log2(f(GC_i))$$
 
-By default, $t_{i,j}$ is further decomposed by the logarithm of sample-specific size factor $s_j$ and the GC content offset $f(GC_i)$.  $\hat s_j$ is estimated using the median read count on the background bins, which are classified by GMM from the bin's POI values: (IP count + 1)/(input count + 1). $\hat f(GC_i)$ is estimated using splines expanded Poisson GLM on bin's read count with bin's fragment GC content $f(GC_i)$ as covariate. Knots for the smoothing splines used are set at `c(0, 0.4, 0.5, 0.6, 1)`. For identifiability, the fitted values are centered at 1 by dividing the sample mean.
+By default, $t_{i,j}$ is further decomposed by the logarithm of sample-specific size factor $s_j$ and the GC content offset $f(GC_i)$.  $\hat s_j$ is estimated using the median read count on the background bins, which are classified by GMM from the bin's POI values: (IP count + 1)/(input count + 1). $\hat f(GC_i)$ is estimated using splines expanded Poisson GLM on bin's read count with bin's fragment GC content $f(GC_i)$ as covariate. Knots for the smoothing splines used are set at `c(0, 0.4, 0.5, 0.6, 1)`. For identifiability, the fitted values $\hat f(GC_i)$ are centered at 1 by dividing the sample mean.
 
 For peak calling, Poisson GLMs using the above design are fitted to identify the significantly modified sliding windows; the default detection criteria is the Wald test p-values < 1e-10 under the alternative hypothesis of ${\beta}_{i,1} > 0$. 
 
@@ -97,8 +97,8 @@ Annotations on the columns of the output table:
 - ***blockSizes***: the widths of the blocks.
 - ***blockStarts***: the start positions of the blocks.
 - ***geneID***: the gene ID of the peak.
-- ***RPM.input***: the RPM (Reads per million mapped reads) calculated from the pooled input samples.
-- ***RPM.IP***: the RPM calculated from the pooled IP samples.
+- ***RPM.input***: the peak RPM (Reads per million mapped reads) calculated from the pooled input samples.
+- ***RPM.IP***: the peak RPM calculated from the pooled IP samples.
 - ***log2FC***: the estimate of IP over input log2 fold change (coefficient estimates of ${\beta}_{i,1}$).
 - ***pvalue***: the p-value of the peak, which is calculated by the Wald test over the coefficient of ${\beta}_{i,1}$.
 - ***fdr***: the adjusted Wald test p-value using Benjamini Hochberg approach.
